--- a/slides/sections/optics.tex
+++ b/slides/sections/optics.tex
@@ -153,7 +153,7 @@ type AdapterP a b s t =
 	\end{align*}
 	\begin{itemize}
 		\pause\item So the proof comes down to showing that a set of natural transformations of natural transformations between the application functors is isomorphic to the underlying set of morphisms.
-		\pause\item This involves expanding the functors on the left using the Yoneda lemma and then summarizing everything by applying the yoneda embedding twice.
+		\pause\item This involves expanding the functors on the left using the Yoneda lemma and then summarizing everything by applying the Yoneda embedding twice.
 		\pause\item This proof is left as an exercise to the reader :) \pause(a short version of the proof is uploaded alongside the slides on ilias).
 	\end{itemize}
 \end{frame}
