cleaned up notation

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -33,7 +33,7 @@
 \newcommand{\bAdaP}{\mathbb{A}daP}
 \newcommand{\bC}{\mathbb{C}}
 \newcommand{\bD}{\mathbb{D}}
-\newcommand{\bHask}{\mathbb{H}ask}
+\newcommand{\bHask}{{\mathbb{H}ask}}
 \newcommand{\bM}{\mathbb{M}}
 \newcommand{\bPre}{\mathbb{P}re}
 \newcommand{\bProf}{{\mathbb{P}rof}}
