--- a/slides/sections/yoneda.tex
+++ b/slides/sections/yoneda.tex
@@ -119,7 +119,7 @@
 		\begin{itemize}
 			\vspace{-18pt}\pause\item Furthermore, this isomorphism is a natural transformation.
 			\pause\item So we can construct the Yoneda embedding $\mY$ from the set $F(A)$.
-			\pause\item Vice versa, if we know all natural transformations $\text{Nat}(\bC(A,-), F)$, we can construct the set $F(A)$.
+			\pause\item Vice versa, if we know all natural transformations $\bSet^\bC(\bC(A,-), F)$, we can construct the set $F(A)$.
 		\end{itemize}
 	\end{itemize}
 \end{frame}
