--- a/slides/sections/basics.tex
+++ b/slides/sections/basics.tex
@@ -44,7 +44,7 @@ A \textit{category} $\bC$ consists of:
 		\[\begin{tikzcd}
 			A && B \\
 			\\
-			{F(A)} && {F(A)}
+			{F(A)} && {F(B)}
 			\arrow["{f\ \in\ \mathbb{C}(A,B)}", from=1-1, to=1-3]
 			\arrow["{F}"', dotted, from=1-1, to=3-1]
 			\arrow["{F}", dotted, from=1-3, to=3-3]
@@ -53,7 +53,7 @@ A \textit{category} $\bC$ consists of:
 		\column{0.7\textwidth}
 		A \textit{functor} $F : \bC \to \bD$ is a structure-preserving map between two categories:
 		\begin{itemize}
-			\pause\item $F$ maps an object $A \in |\bC|$ to an object $B \in |\bD|$
+			\pause\item $F$ maps an object $A \in |\bC|$ to an object $F(A) \in |\bD|$
 			\pause\item $F$ maps a morphism $f \in \bC(A,B)$ to a morphism $F(f) \in \bD(F(A),F(B))$
 			\pause \item $F(id_A) = id_{F(A)}$
 			\pause \item $F(g \circ f) = F(g) \circ F(f)$
