--- a/slides/main.tex
+++ b/slides/main.tex
@@ -42,6 +42,8 @@
 
 \newcommand{\mY}{\mathcal{Y}}
 
+\newcommand{\nat}{\text{Nat}}
+
 \title{What you needa know about Yoneda}
 \author{Emma Bach (she/her)}
 \date{Seminar on Functional Programming and Logic, Summer Semester 2025}
