moved application functor section, added thank you slide

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -65,4 +65,7 @@
 \subfile{sections/yoneda}
 \subfile{sections/cayley}
 \subfile{sections/optics}
+\begin{frame}
+	\centering	\Large{Thank You!}
+\end{frame}
 \end{document}
